fix: circle position - mobile overflow-x - desktop 4k screen

--- a/docs/home.css
+++ b/docs/home.css
@@ -11,6 +11,7 @@ body {
   flex-wrap: wrap;
   margin-top: 100px;
   margin-bottom: 200px;
+  position: relative;
 }
 
 .circle-background {
@@ -235,6 +236,21 @@ a:hover img {
 @media screen and (max-width: 650px) {
   :root {
     --page-margin: var(--grid-gap);
+  }
+
+  html {
+    overflow-x: hidden;
+  }
+  body {
+    margin: 0;
+  }
+  footer,
+  .page-content {
+    margin-left: var(--page-margin);
+    margin-right: var(--page-margin);
+  }
+  footer .rights {
+    right: var(--page-margin);
   }
 
   .circle-background {
